commit: fc1eb51008e236b449b9eb88cb56867d39bc34d0
Author: Wed Mar 31 23:01:24 2010 -0300
  Date: Otvio Fernandes <otaviof@gmail.com>

	working on assync write


commit: 279ce3632fd17b61c7d09b6b1f4f730aebfb8c01
Author: Wed Mar 31 00:16:39 2010 -0300
  Date: Otávio Fernandes <otaviof@gmail.com>

	starting to work with 'write' method, besides, there's tests for it


commit: 25ba5583f3eff51856e2d0ca09b2d69865d070a2
Author: Tue Mar 30 20:26:33 2010 -0300
  Date: Otvio Fernandes <otaviof@gmail.com>

	adding tests for new method 'write'


commit: d3e036e7bbed8f4cbd6fff59e83494935bb28f5d
Author: Tue Mar 30 18:15:07 2010 -0300
  Date: Otvio Fernandes <otaviof@gmail.com>

	adding tests for new main class, and removing some anoying default tests (for a while)


commit: fe0fa2449d1b67d0cc1fe2358ca5e1e49325a960
Author: Mon Mar 29 23:44:19 2010 -0300
  Date: Otávio Fernandes <otaviof@gmail.com>

	adding a little test


commit: 457069c29dcc55166c049ae1fb126bd4e383c32d
Author: Mon Mar 29 15:25:04 2010 -0300
  Date: Otávio Fernandes <otaviof@gmail.com>

	initial version

