@@ -13,7 +13,7 @@ our $VERSION = '0.01';
 use Moose;
 use AnyEvent;
 use AnyEvent::AIO;
-use IO::AIO 2;
+use IO::AIO;
 use Fcntl;
 
 has 'nfs_dir' => (
@@ -37,7 +37,7 @@ has 'nfs_dir' => (
 $|++;
 
 sub write {
-    my ( $self, $size ) = @_;
+    my ($self) = @_;
     my $path = $self->nfs_dir . '/' . rand(10) . '.tmp';
 
     my $req = aio_open $path, O_RDWR | O_CREAT, 0644, sub {
@@ -57,6 +57,26 @@ sub write {
 
     sleep 2 and $req->cancel;
     return $path;
+}
+
+sub read {
+    my ( $self, $path ) = @_;
+    return if ( !$path );
+    my $req = aio_open $path, O_RDONLY, 0, sub {
+        my $fh = shift
+            or die "Error while opening: $!";
+        my $size = -s $fh;
+        aio_read $fh, 0, $size, undef, 0, sub {
+            $_[0] == $size
+                or die "Short read: $!";
+        };
+        aio_close $fh, sub {
+            die "Cannot close: $!"
+                if ( $_[0] );
+        };
+    };
+    sleep 2 and $req->cancel;
+    return 1;
 }
 
 1;
